# den-finance

./: .env  README.md  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
backend/backend/: settings.py
backend/base/: expenses.py  models.py  urls.py  views.py
backends/: db.sqlite3
base/: apps.py  expenses.py  models.py  serializers.py  signals.py  views.py
base/migrations/: 0001_initial.py  0002_transaction_created_at.py  0003_alter_transaction_created_at.py
base/urls/: expenses_urls.py  user_urls.py
base/views/: expenses_views.py  user_views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  apiConfig.js  app.scss  index.css
frontend/src/components/Charts/: Charts.jsx  charts.scss
frontend/src/components/Expense/: Expense.jsx  expense.scss
frontend/src/components/Footer/: Footer.jsx  footer.scss
frontend/src/components/Header/: Header.jsx  header.scss
frontend/src/components/Navbar/: Navbar.jsx  navbar.scss
frontend/src/components/Sidebar/: Sidebar.jsx  sidebar.scss
frontend/src/context/auth/: AuthAction.js  AuthContext.js  AuthReducer.js  UserAction.js  userContext.js
frontend/src/context/transactions/: TransactionAction.js  TransactionContext.js  TransactionReducer.js
frontend/src/hooks/: useAuthContext.js  useLogin.js  useLogout.js  useSignUp.js  useTransactionContext.js
frontend/src/utils/: apiConfig.js
static/css/: main.1ce6253d.css
static/js/: main.58f41221.js.map
staticfiles/js/: main.58f41221.js
staticfiles/static/css/: main.1ce6253d.css.map
(+27 files in other folders)
